muitos bugs: - form de upload de arquivo dava submit qdo dava enter - truncate na visualizacao do campo, ao editar - valor do campo sumia qdo clica - descricao nao pode mais ter html (agora eh wiki parsed) - mostrar X de erro em todos os campos na hora de publicar - mensagens de erro ok na publicacao - possibilidade de cancelar licenca
asa e uira

--- a/src/styles/estudiolivre.css
+++ b/src/styles/estudiolivre.css
@@ -297,9 +297,7 @@ img {
 
 .hiddenDescript {
 	display:none;
-	/*border: 1px solid blue;*/
 	position:absolute;
-	/*right:999px;*/
 	width:150px;
 	text-align:center;
 	height:0px;
@@ -1039,6 +1037,7 @@ DIV.gUpTitle{
 	font-size:12px;
 	overflow: -moz-scrollbars-vertical;
 	float:left;
+	font-weight:normal;
 }
 
 #error-descricao {
